--- a/outils/club_maths/index.html
+++ b/outils/club_maths/index.html
@@ -227,7 +227,7 @@
             </div>
         </a>
 
-        <!-- CARTE 2 : JEU DU CHAOS 
+        <!-- CARTE 2 : JEU DU CHAOS -->
         <a href="jeu_du_chaos.html" class="card chaos">
             <div class="card-header"></div>
             <div class="card-content">
@@ -236,7 +236,7 @@
                 <p>L'ordre naît du hasard. Une expérience fascinante sur les fractales et le Triangle de Sierpinski.</p>
                 <span class="btn">Lancer l'activité</span>
             </div>
-        </a>  -->
+        </a>  
 
     </div>
 
