--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -360,6 +360,11 @@
                 <h2 class="card-title">Puissances : Feuille coupée</h2>
             </a>
 
+            <a href="puzzle_brousseau.html" class="choice-card" data-tags="agrandissement reduction proportionnalite geometrie puzzle">
+                <div class="icon-wrapper"><i data-lucide="puzzle"></i></div>
+                <h2 class="card-title">Puzzle de Brousseau</h2>
+            </a>
+
             <a href="ratio.html" class="choice-card" data-tags="donnees proportionnalite">
                 <div class="icon-wrapper"><i data-lucide="divide"></i></div>
                 <h2 class="card-title">Ratio</h2>
