--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -345,6 +345,11 @@
                 <h2 class="card-title">Glisse entiers</h2>
             </a>
 
+            <a href="le_grand_pari.html" class="choice-card" data-tags="donnees probabilites hasard des">
+                <div class="icon-wrapper"><i data-lucide="dices"></i></div>
+                <h2 class="card-title">Le Grand Pari</h2>
+            </a>
+
             <a href="maitre_du_temps.html" class="choice-card" data-tags="mesures temps horloge">
                 <div class="icon-wrapper"><i data-lucide="clock"></i></div>
                 <h2 class="card-title">Maître du temps</h2>
