--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -370,7 +370,13 @@
                 <h2 class="card-title">Puzzle de Brousseau</h2>
             </a>
 
-            <a href="ratio.html" class="choice-card" data-tags="donnees proportionnalite">
+            
+            <a href="moulin_pythagore.html" class="choice-card" data-tags="geometrie pythagore aires theoreme puzzle">
+                <div class="icon-wrapper"><i data-lucide="wind"></i></div>
+                <h2 class="card-title">Moulin de Pythagore</h2>
+            </a>
+
+<a href="ratio.html" class="choice-card" data-tags="donnees proportionnalite">
                 <div class="icon-wrapper"><i data-lucide="divide"></i></div>
                 <h2 class="card-title">Ratio</h2>
             </a>
