--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -267,7 +267,7 @@
         <div class="controls-wrapper">
             <div class="search-box">
                 <i data-lucide="search"></i>
-                <input type="text" id="searchInput" class="search-input" placeholder="Chercher un outil..." autocomplete="off">
+                <input type="text" id="searchInput" class="search-input" placeholder="Chercher un outil." autocomplete="off">
             </div>
             
             <div class="filters">
@@ -468,6 +468,16 @@
             <a href="unites_aires.html" class="choice-card" data-tags="mesures aire surface">
                 <div class="icon-wrapper"><i data-lucide="maximize"></i></div>
                 <h2 class="card-title">Unités d'Aires</h2>
+            </a>
+
+            <a href="aire_perimetre_plateau.html" class="choice-card" data-tags="mesures aire perimetre surface">
+                <div class="icon-wrapper">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="3" y="3" width="18" height="18" rx="2"/>
+                        <path d="M9 3v18M15 3v18M3 9h18M3 15h18"/>
+                    </svg>
+                </div>
+                <h2 class="card-title">Aire &amp; Périmètre — Plateau</h2>
             </a>
 
         </div>
